# saferead

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  git-commit-branch-gate.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
hooks/: safe_read_hook.py
src/safe_read_hook/: config.py  context.py  decompose.py  splitter.py  tokenizer.py
src/safe_read_hook/analyzers/: __init__.py  python_skeleton.py  sql.py
src/safe_read_hook/recognizers/: __init__.py  _quoting.py  adb.py  find.py  git.py  gradle.py  journalctl.py  psql.py  pytest_runner.py  reader.py  redirects.py  sed.py  ssh.py
src/saferead/: __init__.py  __main__.py  cli.py  config.py  engine.py  install.py
src/saferead/analyzers/: __init__.py  python_skeleton.py
src/saferead/recognizers/: _pathscope.py  python.py  reader.py  redirects.py
src/sash/: __init__.py  __main__.py  cli.py  install.py  verdict.py
src/sash/analyzers/: __init__.py
tests/: conftest.py  golden_decisions.json  test_adb.py  test_analyzers.py  test_config.py  test_corpus.py  test_decompose.py  test_engine.py  test_entrypoint.py  test_find.py  test_git.py  test_golden.py  test_gradle.py  test_install.py  test_journalctl.py  test_pathscope.py  test_psql.py  test_pytest.py  test_python_analyzer.py  test_python_recognizer.py  test_reader.py  test_recognizer_disable.py  test_redirects.py  test_sed.py  test_splitter.py  test_sql_analyzer.py  test_ssh.py  test_tokenizer.py
